# goit-py_web-hw-04

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main copy.py  main.py  not_for_ispection.py  pyproject.toml  requirements.txt
front-init/: error.html  index.html  message.html
front-init/storage/: data.json
